--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" media="(max-width: 740px)" href="mobile.css" />
-    <title>Pig Game</title>
+    <title>Doggy Game</title>
   </head>
   <body>
     <main>
